--- a/cs670/Assignment_2.ipynb
+++ b/cs670/Assignment_2.ipynb
@@ -66,7 +66,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "xYYg2nUu-yFx"
       },
@@ -331,7 +331,7 @@
         },
         "outputId": "f1a65dec-d3af-49f8-e74c-083dfccd8d8f"
       },
-      "execution_count": 77,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -566,7 +566,7 @@
         },
         "outputId": "4aecf606-dba3-477f-91c4-2728a47b14d6"
       },
-      "execution_count": 76,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -681,7 +681,7 @@
         },
         "outputId": "ab18024a-bae5-47ad-b2dd-d14b5569264b"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -708,7 +708,7 @@
         },
         "outputId": "b7fb333f-94cc-48dd-d6f5-eb53cbc7c810"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -752,7 +752,7 @@
       "cell_type": "markdown",
       "source": [
         "##### My analysis and conclusion\n",
-        "<hr> The maximum branching factor is same for both of them which is 4, since for each state, there are 4 possible moves that the farmar can take. The optimal solution has 7 steps. As you may have noticed, I've displayed the number of nodes or states visited by BFS (11 states) and DFS (8 states, 7 steps) to reach the final goal, therefore, DFS solves this puzzle faster than BFS. This is because of the extensive search conducted by BFS which enables it to cover every reachable node whereas DFS prioritises going deep into a particular path before backtracking which is ideal for the given puzzle where the optimal solution is found after seven steps, which is at a considerable depth.\n",
+        "<hr> The maximum branching factor is same for both of them which is 4 (b=4), since for each state, there are 4 possible moves that the farmar can take. The optimal solution has 7 steps. As you may have noticed, I've displayed the number of nodes or states visited by BFS (11 states) and DFS (8 states, 7 steps) to reach the final goal, therefore, DFS solves this puzzle faster than BFS. This is because of the extensive search conducted by BFS which enables it to cover every reachable node (covering all the nodes on one level at a time) whereas DFS prioritises going deep into a particular path (reaches the solution in our case and doesn't even need to backtrack) before backtracking which is ideal for the given puzzle where the optimal solution is found after seven steps, which is at a considerable depth.\n",
         "<br>\n",
         "<br>\n",
         "<br>\n",
