--- a/cs670/Assignment_2.ipynb
+++ b/cs670/Assignment_2.ipynb
@@ -3,8 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": [],
-      "include_colab_link": true
+      "provenance": []
     },
     "kernelspec": {
       "name": "python3",
@@ -15,16 +14,6 @@
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/jeet1912/ms/blob/main/cs670/Assignment_2.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "markdown",
       "source": [
@@ -66,7 +55,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "xYYg2nUu-yFx"
       },
@@ -240,10 +229,22 @@
         "    print(\"No solution found.\")"
       ],
       "metadata": {
-        "id": "KlegVJQvBQib"
+        "id": "KlegVJQvBQib",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "e66cc54a-4822-4899-eed6-a44f968c0d93"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "No solution found.\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -329,9 +330,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "f1a65dec-d3af-49f8-e74c-083dfccd8d8f"
+        "outputId": "f10df4fa-794f-4bc4-b100-504a19dd53e5"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -383,7 +384,7 @@
       "metadata": {
         "id": "IyMXTADBKm92"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -486,10 +487,22 @@
         "    print(\"No solution found.\")"
       ],
       "metadata": {
-        "id": "PLW64WwgYwru"
+        "id": "PLW64WwgYwru",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "d707840b-2c68-4b16-ab5e-eb4e472fef95"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "No solution found.\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -543,8 +556,8 @@
         "        return path\n",
         "    for next_state in get_possible_moves(start):\n",
         "        if tuple(next_state) not in visited:\n",
-        "            new_path = dfs(next_state, goal, path, visited)\n",
         "            print('Number of states visited in DFS: ', len(visited))\n",
+        "            new_path = dfs(next_state, goal, path, visited)\n",
         "            if new_path:\n",
         "                return new_path\n",
         "    return None\n",
@@ -564,21 +577,21 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "4aecf606-dba3-477f-91c4-2728a47b14d6"
+        "outputId": "fc4c2524-a187-4f4e-e8bd-ccf7119d76dc"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Number of states visited in DFS:  8\n",
-            "Number of states visited in DFS:  8\n",
-            "Number of states visited in DFS:  8\n",
-            "Number of states visited in DFS:  8\n",
-            "Number of states visited in DFS:  8\n",
-            "Number of states visited in DFS:  8\n",
-            "Number of states visited in DFS:  8\n",
+            "Number of states visited in DFS:  1\n",
+            "Number of states visited in DFS:  2\n",
+            "Number of states visited in DFS:  3\n",
+            "Number of states visited in DFS:  4\n",
+            "Number of states visited in DFS:  5\n",
+            "Number of states visited in DFS:  6\n",
+            "Number of states visited in DFS:  7\n",
             "starting side: Man, Lion, Goat, Grass\n",
             "target side: \n",
             "starting side: Lion, Grass\n",
@@ -675,22 +688,10 @@
         "print(\"Time taken by BFS in milliseconds: \", (end_time - start_time).total_seconds() * 1000)"
       ],
       "metadata": {
-        "id": "NP-JVGljdMr9",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "ab18024a-bae5-47ad-b2dd-d14b5569264b"
+        "id": "NP-JVGljdMr9"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Time taken by BFS in milliseconds:  0.16899999999999998\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -702,22 +703,10 @@
         "print(\"Time taken by DFS in milliseconds: \", (end_time - start_time).total_seconds() * 1000)"
       ],
       "metadata": {
-        "id": "Wa9EEdQExxCB",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "b7fb333f-94cc-48dd-d6f5-eb53cbc7c810"
+        "id": "Wa9EEdQExxCB"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Time taken by DFS in milliseconds:  0.089\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -752,7 +741,7 @@
       "cell_type": "markdown",
       "source": [
         "##### My analysis and conclusion\n",
-        "<hr> The maximum branching factor is same for both of them which is 4 (b=4), since for each state, there are 4 possible moves that the farmar can take. The optimal solution has 7 steps. As you may have noticed, I've displayed the number of nodes or states visited by BFS (11 states) and DFS (8 states, 7 steps) to reach the final goal, therefore, DFS solves this puzzle faster than BFS. This is because of the extensive search conducted by BFS which enables it to cover every reachable node (covering all the nodes on one level at a time) whereas DFS prioritises going deep into a particular path (reaches the solution in our case and doesn't even need to backtrack) before backtracking which is ideal for the given puzzle where the optimal solution is found after seven steps, which is at a considerable depth.\n",
+        "<hr> The maximum branching factor is same for both of them which is 4 (b=4), since for each state, there are 4 possible moves that the farmar can take. The optimal solution has 7 steps. As you may have noticed, I've displayed the number of nodes or states visited by BFS (11 states) and DFS (8 states, 7 steps) to reach the final goal, therefore, DFS solves this puzzle faster than BFS. This is because of the extensive search conducted by BFS which enables it to cover every reachable node (covering all the nodes on one level at a time) whereas DFS prioritises going deep into a particular path which is ideal for the given puzzle where the optimal solution is found after seven steps, which is at a considerable depth.\n",
         "<br>\n",
         "<br>\n",
         "<br>\n",
