a presentation using Zoom and iMovie.

--- a/ds680/finalTermProject/Untitled1.ipynb
+++ b/ds680/finalTermProject/Untitled1.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1S7wBzjlMlKV-5jXIJSccdMjHLud3Zl_m",
-      "authorship_tag": "ABX9TyM3OyYqLFvV+gHa49JKjnQ4",
+      "authorship_tag": "ABX9TyN+J/P9a9SjRCfwTDBDJBP9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1456,7 +1456,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 530
+          "height": 493
         },
         "id": "2jAZ03KawQJG",
         "outputId": "4548f476-0f12-4ef4-bcdb-fe9c66f073c9"
@@ -2671,7 +2671,7 @@
         "cellView": "form",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 361
+          "height": 376
         },
         "id": "7hvfonUW5BBr",
         "outputId": "66809f16-33fe-4e76-91d5-ef165f7c0e86"
@@ -3186,23 +3186,11 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Lexical Category Distribution"
+        "[A recorded overview.](https://drive.google.com/file/d/1DaPZES-zfBWtITu0E_UYbK9BMHs1Qoyu/view?usp=share_link)"
       ],
       "metadata": {
-        "id": "Jd_FBlgYFk8T"
+        "id": "FtQYmWSk0Wlv"
       }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "def count_lexical_categories(sentence_ascii, avolc_df):\n",
-        "  pass"
-      ],
-      "metadata": {
-        "id": "3LQ3_xhnEGMW"
-      },
-      "execution_count": null,
-      "outputs": []
     }
   ]
 }
