--- a/ds680/assignments/DS680_HW3.ipynb
+++ b/ds680/assignments/DS680_HW3.ipynb
@@ -2773,7 +2773,7 @@
         "```\n",
         "lambda row: 'A' if row['MLP'] > row['SGD'] else 'Z', axis=1\n",
         "```\n",
-        " has been adopted to identify that SGD only performs better than MLP classifier by 0.01 in its recall score for positive reviews."
+        " has been used to identify that SGD only performs better than MLP classifier by 0.01 in its recall score for positive reviews."
       ],
       "metadata": {
         "id": "ctEzafa0_GZV"
